--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <img src="perserverance.JPG" alt="perserverance" height=300px />
 
           <div class="testimonial-box">
-            <h2>Stay tune for more updates!</h2>
+            <h2>Stay tuned for more updates!</h2>
             <!-- <p class="testimonial-author">&mdash; Benjamin Franklin</p> -->
             <!-- <p class="testimonial-text">
               As an individual who seeks challenges, I am never afraid to step out
