--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>Darius Koh</title>
 </head>
 
 <body>
-  <div class="container">
+  <a href="#" class="home" data-aos="fade-down"><strong>BACK TO THE TOP</strong></a>
+  <div class="container" data-aos="fade-down">
     <header class="header">
       <a href="#">
         <img class="logo" alt="DKYF-title" src="name.JPG" />
@@ -306,6 +308,10 @@
       purposes only.
     </footer>
   </div>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
