--- a/index.html
+++ b/index.html
@@ -1,317 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <title>Portfolio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
-
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <title>Darius Koh</title>
 </head>
 
 <body>
-  <a href="#" class="home" data-aos="fade-down"><strong>BACK TO THE TOP</strong></a>
-  <div class="container" data-aos="fade-down">
-    <header class="header">
-      <a href="#">
-        <img class="logo" alt="DKYF-title" src="name.JPG" />
-      </a>
-
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#Intro"><strong>Introduction</strong></a></li>
-          <li><a class="main-nav-link" href="#Hobby"><strong>Hobbies</strong></a></li>
-          <li>
-            <a class="main-nav-link" href="#Motto"><strong>Motto</strong></a>
-          </li>
-          <li><a class="main-nav-link" href="#Work"><strong>Experiences</strong></a></li>
-          <!-- <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li> -->
-        </ul>
-      </nav>
-
-      <!-- <button class="btn-mobile-nav">
-        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
-        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
-      </button> -->
-    </header>
-    <main>
-      <div class="main-text-box">
-        <h1>Hello, こんにちは, 你好, Namaste!</h1>
-        <p class="main-text">
-          Nice to e-meet you! I'm Darius Koh, and I'm currently working as a Regional Financial Analyst
-          with Siemens Healthineers in Singapore.
-        </p>
-        <p class="main-text2">
-          I'm enthusiastic about learning new skills and knowledge to push myself to greather heights! 😊
-        </p>
-        <a class="btn btn--big" href="https://www.linkedin.com/in/darius-koh-yu-feng/" target="_blank">Click here to
-          connect!</a>
+  <nav>
+    <ul class="navbar">
+      <div class="logo">
+        <h3>DKYF</h3>
       </div>
-      <img src="DKYF.JPG" alt="DKYF" id="Intro" />
-    </main>
-
-    <section>
-      <h2 class="hobbies" id="Hobby">What are my hobbies?</h2>
-      <div class=" grid-3-cols">
-        <div>
-          <img src="exercise.JPG" alt="exercise" height=260px width=700px />
-          <a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
-            target="_blank" class="credits">Image by Outside</a>
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" class="features-icon" fill="none" viewBox="0 0 24 24"
-            stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
-          </svg> -->
-          <p class="features-title"><strong>Exercise & Keep Fit!</strong></p>
-          <p class="features-text">
-            My routine includes weightlifting at least twice a week and I also go for a short jog every weekend.
-            Feel free to hit me up for a session together!
-          </p>
-        </div>
-
-        <div>
-          <img src="food.JPG" alt="food" height=260px width=700px />
-          <a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
-            class="credits">Image by HONEYCOMBERS</a>
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" class="features-icon" fill="none" viewBox="0 0 24 24"
-            stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-          </svg> -->
-          <p class="features-title">
-            <strong>Enjoy Yummy Food!</strong>
-          </p>
-          <p class="features-text">
-            My favourite food are Nasi Lemak, Prawn Noodles, Carbonara, Chirashi Don and many many more!
-
-          </p>
-        </div>
-
-        <div>
-          <img src="anime.JPG" alt="anime" height=260px width=700px />
-          <a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank" class="credits">Image by
-            IMDB</a>
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" class="features-icon" fill="none" viewBox="0 0 24 24"
-            stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-          </svg> -->
-          <p class="features-title">
-            <strong>Binge on Animes!</strong>
-          </p>
-          <p class="features-text">
-            Animes are relatable as it expresses vibrancy in its characters with dreams and goals.
-            Furthermore, the action and fight scenes are amazing!
-          </p>
-        </div>
+      <div class="nav-items">
+        <li><a href="#">Introduction</a></li>
+        <li><a href="#">Hobbies</a></li>
+        <li><a href="#">Motto</a></li>
+        <li><a href="#">Experiences</a></li>
+        <li><a href="prior version/prior.html" target="_blank">Prior Version</a></li>
       </div>
-    </section>
-
-    <section class="testimonial-section" id="Motto">
-      <div class="grid-3-cols-2">
-        <img src="perserverance.JPG" alt="perserverance" height=280px />
-
-        <div class="testimonial-box">
-          <h2>"It's okay to fail. It's not okay to give up."</h2>
-          <!-- <p class="testimonial-author">&mdash; Benjamin Franklin</p> -->
-          <p class="testimonial-text">
-            As an individual who seeks challenges, I am never afraid to step out
-            of my comfort zone and explore new opportunities. I sincerely believe that as
-            long as I am willing to strive for excellence and give my best, I will definitely become
-            a stronger and more confident professional. Regardless of the outcome, this is
-            already a big win for my personal development.
-          </p>
-          <a href="https://timesofindia.indiatimes.com/blogs/life-n-style/never-give-up-its-always-the-darkest-before-dawn/"
-            target="_blank" class="credits2">Image by
-            The Times of India</a>
-
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2 class="work-exp" id="Work">Previous Work Experiences</h2>
-      <div class="grid-3-cols">
-        <figure class="chair">
-          <img src="EY.JPG" href="#" alt="EY" height=90px />
-          <div class="chair-box">
-            <h3>Transaction Advisory Associate</h3>
-            <ul class="chair-details">
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
-                </svg> -->
-                <!-- Span is a generic INLINE text element, it doesn't have any meaning. It's like a div element, but inline -->
-                <p>- Assisted senior managers with financial due diligence processes
-                  such as: </p>
-
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg> -->
-                <p>[1] Reconciliation of management accounts to audited financial statements and
-                </p>
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg> -->
-                <p>[2] Building of Revenue and Cost bridges to understand the key business drivers </p>
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
-                </svg>
-                <span>Weighs 16 kg</span> -->
-              </li>
-            </ul>
-            <div class="chair-price">
-              <!-- <strong>250€</strong> -->
-              <a href="https://www.ey.com/en_sg" target="_blank" class="btn btn--small">Click here for more</a>
-            </div>
-          </div>
-        </figure>
-
-        <figure class="chair">
-          <img src="GFC.JPG" alt="GFC" height=90px />
-          <div class="chair-box">
-            <h3>Venture Capital Research Intern</h3>
-            <ul class="chair-details">
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
-                </svg> -->
-                <p>- Researched on Seed to Series A investment opportunities in key sectors within Asia
-                </p>
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg> -->
-                <p>- Assisted senior managers with due diligence checks on financial data (e.g. cohort analysis and
-                  review of
-                  unit economics)</p>
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg> -->
-                <p>- Prepared pitchbooks for management reviews</p>
-              </li>
-              <!-- <li>
-                <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
-                </svg>
-                <span>Weighs 22 kg</span>
-              </li> -->
-            </ul>
-            <div class="chair-price">
-              <!-- <strong>525€</strong> -->
-              <a href="https://www.globalfounderscapital.com/" target="_blank" class="btn btn--small">Click here for
-                more</a>
-            </div>
-          </div>
-        </figure>
-
-        <figure class="chair">
-          <img src="Wilmar.JPG" alt="Wilmar" height=90px />
-          <div class="chair-box">
-            <h3>Finance & Operations Intern</h3>
-            <ul class="chair-details">
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
-                </svg> -->
-                <p>- Accomplished a 10-week management programme in India with exposure and hands-on sessions in all
-                  corporate functions (Marketing, Sales, Supply Chain & Finance) of the company
-                </p>
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg> -->
-                <!-- <p></p> -->
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg> -->
-                <!-- <p>Organic cotton</p> -->
-              </li>
-              <li>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" class="chair-icon" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
-                </svg> -->
-                <!-- <p>Weighs 80 kg</p> -->
-              </li>
-            </ul>
-            <div class="chair-price">
-              <!-- <strong>1450€</strong> -->
-              <a href="https://www.wilmar-international.com/" target="_blank" class="btn btn--small">Click here for
-                more</a>
-            </div>
-          </div>
-        </figure>
-      </div>
-      <section class="staytune">
-        <div class="grid-3-cols-2">
-          <img src="perserverance.JPG" alt="perserverance" height=300px />
-
-          <div class="testimonial-box">
-            <h2>Stay tuned for more updates!</h2>
-            <!-- <p class="testimonial-author">&mdash; Benjamin Franklin</p> -->
-            <!-- <p class="testimonial-text">
-              As an individual who seeks challenges, I am never afraid to step out
-              of my comfort zone and explore new opportunities. I sincerely believe that as
-              long as I am willing to strive for excellence and give my best, I will definitely become
-              a stronger and more confident professional. Regardless of the outcome, this is
-              already a big win for my personal development.
-            </p>
-            <a href="https://timesofindia.indiatimes.com/blogs/life-n-style/never-give-up-its-always-the-darkest-before-dawn/"
-              target="_blank" class="credits2">Image by
-              The Times of India</a> -->
-      </section>
-    </section>
-    <footer>
-      Copyright &copy; 2022 by Darius Koh (DK). Part of DK's journey to master Web Development with "Build Responsive
-      Real-World Websites with HTML and CSS" online course. Use for learning
-      purposes only.
-    </footer>
+    </ul>
+  </nav>
+  <video autoplay muted loop class="vid1">
+    <source src="video.mp4" type="video/mp4">
+  </video>
+  <img src="DKYF.JPG" alt="DKYF" id="DKYF" class="DKYF" data-aos="fade-up" />
+  <div class="overlay"></div>
+  <div class="container" data-aos="fade-up">
+    <h2>Hello, こんにちは, 你好, Namaste, Bonjour, Olá!</h2>
+    <p class="p1">Nice to e-meet you! 👋 I'm Darius Koh, and I'm currently working as a Regional Financial Analyst
+      with Siemens Healthineers in Singapore.</p>
+    <p class="p2">I'm enthusiastic about learning new skills and knowledge to push
+      myself to greather heights! As I am really keen in building an online personal webpage,
+      I decided to embark on a journey to learn Web Development.😊
+    </p>
+    <p class="p3">If you have any ideas or recommendations to improve my site, please
+      feel free to connect with me on LinkedIn and let's have coffee together! ☕
+    </p>
+    <a href="https://www.linkedin.com/in/darius-koh-yu-feng/" target="_blank""><strong>Find Me Here!</strong></a>
   </div>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+
+  <script src=" https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
 </body>
+
+
 
 </html>
