--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Portfolio</title>
+  <title>Darius Koh</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -16,11 +16,11 @@
         <h3>DKYF</h3>
       </div>
       <div class="nav-items">
-        <li><a href="#">Introduction</a></li>
-        <li><a href="#">Hobbies</a></li>
+        <li><a href="index.html">Introduction</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="#">Motto</a></li>
         <li><a href="#">Experiences</a></li>
-        <li><a href="prior version/prior.html" target="_blank">Prior Version</a></li>
+        <li><a href="prior.html" target="_blank">Prior Version</a></li>
       </div>
     </ul>
   </nav>
