--- a/hobbies.html
+++ b/hobbies.html
@@ -18,8 +18,8 @@
       <div class="nav-items">
         <li><a href="index.html">Introduction</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a href="#">Motto</a></li>
-        <li><a href="#">Experiences</a></li>
+        <li><a href="motto.html">Motto</a></li>
+        <li><a href="work.html">Experiences</a></li>
         <li><a href="prior.html" target="_blank">Prior Version</a></li>
       </div>
     </ul>
@@ -71,13 +71,20 @@
           Furthermore, the action and fight scenes are amazing!
         </p>
       </div>
+
     </div>
+
   </div>
+
+
   <script src=" https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
 </body>
+<div class="back">
+  <a class="back" href="index.html"><strong>&larr; Back To Home</strong></a>
+</div>
 
 
 
