--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="nav-items">
         <li><a href="index.html">Introduction</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a href="#">Motto</a></li>
-        <li><a href="#">Experiences</a></li>
+        <li><a href="motto.html">Motto</a></li>
+        <li><a href="work.html">Experiences</a></li>
         <li><a href="prior.html" target="_blank">Prior Version</a></li>
       </div>
     </ul>
