--- a/hobbies.html
+++ b/hobbies.html
@@ -30,61 +30,64 @@
   <div class="overlay"></div>
   <div class="container" data-aos="fade-up">
     <h2>What are my hobbies?</h2>
-
-    <div class="images">
-      <img src="hobbies/exercise.JPG" alt="exercise" height=200 width=200 class="exercise">
-      <img src="hobbies/food.JPG" alt="food" height=200 width=200 class="food">
-      <img src="hobbies/anime.JPG" alt="anime" height=200 width=200 class="anime">
-    </div>
-    <div class="grid-3-cols">
-      <div>
-        <a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
-          target="_blank" class="credits"><strong>Image by Outside</strong></a>
-        <p class="title"><strong>Exercise & Keep Fit!</strong></p>
-        <p class="text">
-          My routine includes weightlifting at least twice a week and I also go for a short jog every weekend.
-          Feel free to hit me up for a session together!
-        </p>
-      </div>
-      <div>
-        <a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
-          class="credits"><strong>Image
-            by HONEYCOMBERS</strong></a>
-        <p class="title">
-          <strong>Enjoy Yummy Food!</strong>
-        </p>
-        <p class="text">
-          My favourite food are Nasi Lemak, Prawn Noodles, Carbonara, Chirashi Don and many many more!
-
-        </p>
-      </div>
-
-      <div>
-        <a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank" class="credits"><strong>Image
-            by
-            IMDB</strong></a>
-        <p class="title">
-          <strong>Binge on Animes!</strong>
-        </p>
-        <p class="text">
-          Animes are relatable as it expresses vibrancy in its characters with dreams and goals.
-          Furthermore, the action and fight scenes are amazing!
-        </p>
-      </div>
-
-    </div>
-
   </div>
 
+  <div class="images" data-aos="fade-up">
+    <li><img src="hobbies/exercise.JPG" alt="exercise" height="200" width="200"></li>
+    <li><img src="hobbies/food.JPG" alt="food" height="200" width="200"></li>
+    <li><img src="hobbies/anime.JPG" alt="anime" height="200" width="200"></li>
+  </div>
+  <div data-aos="fade-up">
+    <div class="credits">
+      <li><a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
+          target="_blank" class="credits"><strong>Image by Outside</strong></a></li>
+      <li><a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
+          class="credits"><strong>Image
+            by HONEYCOMBERS</strong></a></li>
+      <li><a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank" class="credits"><strong>Image
+            by
+            IMDB</strong></a></li>
+    </div>
+    <div class="title">
+      <li>
+        <p><strong>Exercise & Keep Fit!</strong></p>
+      </li>
+      <li>
+        <p>
+          <strong>Enjoy Yummy Food!</strong>
+        </p>
+      </li>
+      <li>
+        <p>
+          <strong>Binge on Animes!</strong>
+        </p>
+      </li>
+    </div>
+    <div class="text">
+      <p class="column1">
+        My routine includes weightlifting at least twice a week and I also go for a short jog every weekend.
+        Feel free to hit me up for a session together!
+      </p>
+      <p class="column2">
+        My favourite food are Nasi Lemak, Prawn Noodles, Carbonara, Chirashi Don and many many more!
+      </p>
+      <p class="column3">
+        Animes are relatable as it expresses vibrancy in its characters with dreams and goals.
+        Furthermore, the action and fight scenes are amazing!
+      </p>
+    </div>
 
-  <script src=" https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+
+    <div class="back">
+      <a class="back" href="index.html"><strong>&larr; Back To Home</strong></a>
+    </div>
+
+    <script src=" https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
-<div class="back">
-  <a class="back" href="index.html"><strong>&larr; Back To Home</strong></a>
-</div>
+
 
 
 
