--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,7 @@
   <title>DKYF - Hobbies</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
@@ -36,60 +36,44 @@
     <h2>What are my hobbies?</h2>
   </div>
 
-  <div class="images" data-aos="fade-up">
-    <li><img src="hobbies/exercise.JPG" alt="exercise" height="200" width="200"></li>
-    <li><img src="hobbies/food.JPG" alt="food" height="200" width="200"></li>
-    <li><img src="hobbies/anime.JPG" alt="anime" height="200" width="200"></li>
-  </div>
-  <div data-aos="fade-up">
-    <div class="credits">
-      <li><a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
-          target="_blank" class="credits"><strong>Image by Outside</strong></a></li>
-      <li><a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
-          class="credits"><strong>Image
-            by HONEYCOMBERS</strong></a></li>
-      <li><a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank" class="credits"><strong>Image
-            by
-            IMDB</strong></a></li>
-    </div>
-    <div class="title">
-      <li>
-        <p><strong>Exercise & Keep Fit!</strong></p>
-      </li>
-      <li>
-        <p>
-          <strong>Enjoy Yummy Food!</strong>
-        </p>
-      </li>
-      <li>
-        <p>
-          <strong>Binge on Animes!</strong>
-        </p>
-      </li>
-    </div>
-    <div class="text">
-      <p class="column1">
-        My routine includes weightlifting at least twice a week and I also go for a short jog every weekend.
-        Feel free to hit me up for a session together!
-      </p>
-      <p class="column2">
-        My favourite food are Nasi Lemak, Prawn Noodles, Carbonara, Chirashi Don and many many more!
-      </p>
-      <p class="column3">
-        Animes are relatable as it expresses vibrancy in its characters with dreams and goals.
-        Furthermore, the action and fight scenes are amazing!
-      </p>
-    </div>
-
-
+  <div class="grid" data-aos="fade-up">
+    <img src="hobbies/exercise.JPG" alt="exercise" height="200" width="200">
+    <img src="hobbies/food.JPG" alt="food" height="200" width="200">
+    <img src="hobbies/anime.JPG" alt="anime" height="200" width="200">
+    <a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
+      target="_blank" class="credits"><strong>Image by Outside</strong></a>
+    <a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
+      class="credits"><strong>Image
+        by HONEYCOMBERS</strong></a>
+    <a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank" class="credits"><strong>Image
+        by
+        IMDB</strong></a>
+    <div><strong>Exercise & Keep Fit!</strong></div>
+    <div><strong>Enjoy Yummy Food!</strong></div>
+    <div><strong>Binge on Animes!</strong></div>
+    <p class="gridtext">
+      My routine includes weightlifting at least twice a week and I also go for a short jog every weekend.
+      Feel free to hit me up for a session together!
+    </p>
+    <p class="gridtext">
+      My favourite food are Nasi Lemak, Prawn Noodles, Carbonara, Chirashi Don and many many more!
+    </p>
+    <p class="gridtext">
+      Animes are relatable as it expresses vibrancy in its characters with dreams and goals.
+      Furthermore, the action and fight scenes are amazing!
+    </p>
     <div class="back">
       <a class="back" href="index.html"><strong>&larr; Back To Home</strong></a>
     </div>
+  </div>
 
-    <script src=" https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+
+
+
+  <script src=" https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 
