--- a/work.html
+++ b/work.html
@@ -24,6 +24,7 @@
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="motto.html">Motto</a></li>
         <li><a href="work.html">Experiences</a></li>
+        <li><a href="diving.html">Photos</a></li>
         <li><a href="prior.html" target="_blank">Prior Version</a></li>
       </div>
     </ul>
@@ -42,7 +43,10 @@
         <div class="content">
           <h4>EY Corporate Advisors</h4>
           <p>Transaction Advisory Associate</p>
-
+          <div>🎫 Assisted senior managers with financial due diligence processes
+            such as:</div>
+          <div>[1] Reconciliation of management accounts to audited financial statements and</div>
+          <div>[2] Building of Revenue and Cost bridges to understand the key business drivers</div>
         </div>
         <div class="button">
           <a href="https://www.ey.com/en_sg" target="_blank">Website</a>
@@ -53,8 +57,12 @@
           <img src="work/GFC.JPG">
         </div>
         <div class="content">
-          <h4>Global Founders</h4>
+          <h4>Global Founders Capital</h4>
           <p>Venture Capital Research Intern</p>
+          <div>🔎 Researched on Seed to Series A investment opportunities in key sectors within Asia</div>
+          <div>🎟 Assisted senior managers with due diligence checks on financial data (e.g. cohort analysis and
+            review of unit economics)</div>
+          <div>🧾 Prepared pitchbooks for management reviews</div>
         </div>
         <div class="button">
           <a href="https://www.globalfounderscapital.com/" target="_blank">Website</a>
@@ -67,7 +75,10 @@
         <div class="content">
           <h4>XINCAP Pte. Ltd.</h4>
           <p>Finance & Operations Intern</p>
-
+          <div>⛏ Pioneering team to establish CEMANI Snacks, Singapore’s first
+            premium brand of fried chicken skin product </div>
+          <div>📔 Assisted senior management team with CEMANI’s financial projections and fundraising deck
+          </div>
         </div>
         <div class="button">
           <a href="https://www.xincap.co/" target="_blank">Website</a>
@@ -80,6 +91,9 @@
         <div class="content">
           <h4>Wilmar International</h4>
           <p>Finance & Operations Intern</p>
+          <div>⛳ Accomplished a 10-week management programme in India with exposure and
+            hands-on sessions in all corporate functions (Marketing, Sales, Supply Chain &
+            Finance) of the company to understand India’s edible oil market</div>
         </div>
         <div class="button">
           <a href="https://www.wilmar-international.com/" target="_blank">Website</a>
