--- a/prior.html
+++ b/prior.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <a href="#" class="home" data-aos="fade-down"><strong>BACK TO THE TOP</strong></a>
+  <!-- <a href="#" class="home" data-aos="fade-down"><strong>BACK TO THE TOP</strong></a> -->
   <div class="container" data-aos="fade-down">
     <header class="header">
       <a href="index.html">
@@ -123,7 +123,7 @@
               </p>
               </li>
               <li>
-                <p>[2] Building of Revenue and Cost bridges to understand the key business drivers </p>
+                <p>[2] Building of Revenue and Cost bridges to understand the key business drivers</p>
               </li>
               <li>
               </li>
