--- a/hobbies.html
+++ b/hobbies.html
@@ -29,7 +29,7 @@
       </div>
     </ul>
   </nav>
-  <video autoplay muted loop class="vid1">
+  <video autoplay muted loop playsinline class="vid1">
     <source src="hobbies/hobbies.mp4" type="video/mp4">
   </video>
   <div class="overlay"></div>
