--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </ul>
   </nav>
-  <video autoplay muted loop class="vid1">
+  <video autoplay muted loop playsinline class="vid1">
     <source src="video.mp4" type="video/mp4">
   </video>
   <img src="DKYF.JPG" alt="DKYF" id="DKYF" class="DKYF" data-aos="fade-up" />
