--- a/diving.html
+++ b/diving.html
@@ -29,7 +29,7 @@
       </div>
     </ul>
   </nav>
-  <video autoplay muted loop class="vid1">
+  <video autoplay muted loop playsinline class="vid1">
     <source src="diving/diving.mp4" type="video/mp4">
   </video>
 
