--- a/diving.html
+++ b/diving.html
@@ -5,12 +5,21 @@
   <title>DKYF - Photos</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
+
+
   <link rel="stylesheet" type="text/css" href="diving/style.css">
+  <link rel="stylesheet" href="diving/queries.css" />
+
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+  <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
+  <script defer src="script.js"></script>
+
 </head>
 
 <body>
@@ -27,6 +36,12 @@
         <li><a href="diving.html">Photos</a></li>
         <li><a href="prior.html" target="_blank">Prior Version</a></li>
       </div>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+
     </ul>
   </nav>
   <video autoplay muted loop playsinline class="vid1">
@@ -49,10 +64,10 @@
     <img src="diving/img3.JPG" alt="diving" class="img3" data-aos="fade-up" />
     <img src="diving/img4.JPG" alt="diving" class="img4" data-aos="fade-up" />
     <img src="diving/img5.JPG" alt="diving" class="img5" data-aos="fade-up" />
-    <p>FINDING NEMO! 👋</p>
-    <p>Don't you dare sneak a pic of me 😒</p>
-    <p>I'm coming for ya ass! 😡</p>
-    <p>Is DK thinking about life? 🤔</p>
+    <p class="grid-text1">FINDING NEMO! 👋</p>
+    <p class="grid-text2">Don't you dare sneak a pic of me 😒</p>
+    <p class="grid-text3">I'm coming for ya ass! 😡</p>
+    <p class="grid-text4">Is DK thinking about life? 🤔</p>
 
   </div>
 
