--- a/diving.html
+++ b/diving.html
@@ -66,7 +66,7 @@
     <img src="diving/img5.JPG" alt="diving" class="img5" data-aos="fade-up" />
     <p class="grid-text1">FINDING NEMO! 👋</p>
     <p class="grid-text2">Don't you dare sneak a pic of me 😒</p>
-    <p class="grid-text3">I'm coming for ya ass! 😡</p>
+    <p class="grid-text3">Grrr, I'm coming for ya! 😡</p>
     <p class="grid-text4">Is DK thinking about life? 🤔</p>
 
   </div>
