--- a/motto.html
+++ b/motto.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" type="text/css" href="motto/style.css">
-  <link rel="stylesheet" href="queries.css" />
+  <link rel="stylesheet" href="motto/queries.css" />
 
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
