--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <nav>
-    <ul class="navbar">
+    <ul class="navbar" name="navbar">
       <div class="logo">
         <h3>DKYF</h3>
       </div>
