--- a/hobbies.html
+++ b/hobbies.html
@@ -5,12 +5,23 @@
   <title>DKYF - Hobbies</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
+
+
   <link rel="stylesheet" type="text/css" href="hobbies/style.css">
+  <link rel="stylesheet" href="hobbies/queries.css" />
+
+
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+  <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
+  <script defer src="script.js"></script>
+
+
 </head>
 
 <body>
@@ -27,6 +38,12 @@
         <li><a href="diving.html">Photos</a></li>
         <li><a href="prior.html" target="_blank">Prior Version</a></li>
       </div>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+
     </ul>
   </nav>
   <video autoplay muted loop playsinline class="vid1">
@@ -38,28 +55,28 @@
   </div>
 
   <div class="grid" data-aos="fade-up">
-    <img src="hobbies/exercise.JPG" alt="exercise" height="200" width="200">
-    <img src="hobbies/food.JPG" alt="food" height="200" width="200">
-    <img src="hobbies/anime.JPG" alt="anime" height="200" width="200">
+    <img src="hobbies/exercise.JPG" class="exercise" height="200" width="200">
+    <img src="hobbies/food.JPG" class="food" height="200" width="200">
+    <img src="hobbies/anime.JPG" class="anime" height="200" width="200">
     <a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
-      target="_blank" class="credits"><strong>Image by Outside</strong></a>
+      target="_blank" class="credits1"><strong>Image by Outside</strong></a>
     <a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
-      class="credits"><strong>Image
+      class="credits2"><strong>Image
         by HONEYCOMBERS</strong></a>
-    <a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank" class="credits"><strong>Image
+    <a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank" class="credits3"><strong>Image
         by
         IMDB</strong></a>
-    <div><strong>Exercise & Keep Fit!</strong></div>
-    <div><strong>Enjoy Yummy Food!</strong></div>
-    <div><strong>Binge on Animes!</strong></div>
-    <p class="gridtext">
+    <div class="title1"><strong>Exercise & Keep Fit!</strong></div>
+    <div class="title2"><strong>Enjoy Yummy Food!</strong></div>
+    <div class="title3"><strong>Binge on Animes!</strong></div>
+    <p class="gridtext1">
       My routine includes weightlifting at least twice a week and I also go for a short jog every weekend.
       Feel free to hit me up for a session together!
     </p>
-    <p class="gridtext">
+    <p class="gridtext2">
       My favourite food are Nasi Lemak, Prawn Noodles, Carbonara, Chirashi Don and many many more!
     </p>
-    <p class="gridtext">
+    <p class="gridtext3">
       Animes are relatable as it expresses vibrancy in its characters with dreams and goals.
       Furthermore, the action and fight scenes are amazing!
     </p>
