--- a/diving.html
+++ b/diving.html
@@ -34,6 +34,7 @@
         <li><a href="motto.html">Motto</a></li>
         <li><a href="work.html">Experiences</a></li>
         <li><a href="diving.html">Photos</a></li>
+        <li><a href="birthday.html">Album</a></li>
         <li><a href="prior.html" target="_blank">Prior Version</a></li>
       </div>
 
