--- a/hobbies.html
+++ b/hobbies.html
@@ -57,9 +57,9 @@
   </div>
 
   <div class="grid" data-aos="fade-up">
-    <img src="hobbies/exercise.JPG" class="exercise" height="200" width="200">
-    <img src="hobbies/food.JPG" class="food" height="200" width="200">
-    <img src="hobbies/anime.JPG" class="anime" height="200" width="200">
+    <img src="v1/hobbies/exercise.JPG" class="exercise" height="200" width="200">
+    <img src="v1/hobbies/food.JPG" class="food" height="200" width="200">
+    <img src="v1/hobbies/anime.JPG" class="anime" height="200" width="200">
     <a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
       target="_blank" class="credits1"><strong>Image by Outside</strong></a>
     <a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
