--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
         </div>
 
         <div class="step-img-box">
-          <img src="hobbies/exercise.jpg" class="step-img1" />
+          <img src="hobbies/exercise.JPG" class="step-img1" />
           <a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
             target="_blank" class="credits1"><strong>Image by Outside</strong></a>
         </div>
 
         <!-- 2nd Hobby -->
         <div class="step-img-box">
-          <img src="hobbies/food.jpg" class="step-img2" />
+          <img src="hobbies/food.JPG" class="step-img2" />
           <a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
             class="credits2"><strong>Image
               by HONEYCOMBERS</strong></a>
@@ -136,7 +136,7 @@
           </p>
         </div>
         <div class="step-img-box">
-          <img src="hobbies/anime.jpg" class="step-img3" />
+          <img src="hobbies/anime.JPG" class="step-img3" />
           <a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank"
             class="credits3"><strong>Image
               by
