--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <nav class="main-nav">
       <ul class="main-nav-list">
+        <img src="nav-img.PNG" class="nav-img">
         <li><a class="main-nav-link" href="#hobbies">Hobbies</a></li>
         <li><a class="main-nav-link" href="#work">Experiences</a></li>
         <li><a class="main-nav-link" href="#motto">Motto</a></li>
@@ -98,18 +99,29 @@
           </p>
         </div>
 
+
         <div class="step-img-box">
-          <img src="hobbies/exercise.JPG" class="step-img1" />
+          <video autoplay muted loop playsinline class="vid3">
+            <source src="hobbies/exercise.mp4" type="video/mp4">
+          </video>
+          <a href="https://www.pexels.com/video/a-man-working-out-using-dumbbell-5319099/" target="_blank"
+            class="credits1"><strong>Credits to Pexel</strong></a>
+          <!-- <img src="hobbies/exercise.JPG" class="step-img1" />
           <a href="https://www.outsideonline.com/health/training-performance/weight-lifting-training-beginners/"
-            target="_blank" class="credits1"><strong>Image by Outside</strong></a>
+            target="_blank" class="credits1"><strong>Image by Outside</strong></a> -->
         </div>
 
         <!-- 2nd Hobby -->
         <div class="step-img-box">
-          <img src="hobbies/food.JPG" class="step-img2" />
+          <video autoplay muted loop playsinline class="vid3">
+            <source src="hobbies/food.mp4" type="video/mp4">
+          </video>
+          <a href="https://www.pexels.com/video/slow-motion-footage-of-a-person-skillfully-mixing-fried-rice-in-a-wok-on-a-high-fire-stove-2894888/"
+            target="_blank" class="credits1"><strong>Credits to Pexel</strong></a>
+          <!-- <img src="hobbies/food.JPG" class="step-img2" />
           <a href="https://thehoneycombers.com/singapore/best-local-food-singapore/" target="_blank"
             class="credits2"><strong>Image
-              by HONEYCOMBERS</strong></a>
+              by HONEYCOMBERS</strong></a> -->
         </div>
         <div class="step-text-box">
           <h3 class="heading-tertiary">Enjoy Yummy Food!</h3>
@@ -136,11 +148,12 @@
           </p>
         </div>
         <div class="step-img-box">
-          <img src="hobbies/anime.JPG" class="step-img3" />
+          <img src="https://media.giphy.com/media/63IqdUVg9HjDMG9NKF/giphy.gif" class="vid4" />
+          <a href="https://giphy.com/gifs/iQiyiOfficial-demon-slayer-kimetsu-no-yaiba-iqiyi-63IqdUVg9HjDMG9NKF"
+            target="_blank" class="credits1"><strong>Credits to iQiyi</strong></a>
+          <!-- <img src=" hobbies/anime.JPG" class="step-img3" />
           <a href="https://www.imdb.com/title/tt9335498/?ref_=tt_mv_close" target="_blank"
-            class="credits3"><strong>Image
-              by
-              IMDB</strong></a>
+            class="credits3"><strong>Image by IMDB</strong></a> -->
         </div>
       </div>
     </section>
