--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a class="main-nav-link" href="#work">Experiences</a></li>
         <li><a class="main-nav-link" href="#motto">Motto</a></li>
         <li><a class="main-nav-link" href="#photos">Photos</a></li>
+        <li><a class="main-nav-link" href="CV.html">Others</a></li>
         <li><a class="main-nav-link" href="old.html">Prior Version</a></li>
       </ul>
     </nav>
@@ -295,10 +296,13 @@
 
 
   </main>
+
+  <!-- this script is for the data-aos="fade-up"-->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
+
 </body>
 
 <footer class="footer">
