--- a/CV.html
+++ b/CV.html
@@ -69,14 +69,14 @@
         <div>What are my strengths?</div>
       </div>
       <div>
-        <picture><img src="cv/laptop.jpg" class="CV-img2"></picture>
+        <picture><img src="CV/laptop.jpg" class="CV-img2"></picture>
       </div>
     </section>
 
     <section class="strengths-info">
       <div class="strengths-info-block">
         <div>
-          <picture><img src="cv/analysis.jpg"></picture>
+          <picture><img src="CV/analysis.jpg"></picture>
         </div>
         <div class="strengths-info-text">Financial Analysis</div>
         <div class="strengths-info-text2">Stuck between two business decisions?</div>
@@ -84,7 +84,7 @@
       </div>
       <div class="strengths-info-block">
         <div>
-          <picture><img src="cv/data.jpg"></picture>
+          <picture><img src="CV/data.jpg"></picture>
         </div>
         <div class="strengths-info-text">Data Visualisation</div>
         <div class="strengths-info-text2">Can't figure out where the problem lies in?</div>
@@ -92,7 +92,7 @@
       </div>
       <div class="strengths-info-block">
         <div>
-          <picture><img src="cv/strategy.jpg"></picture>
+          <picture><img src="CV/strategy.jpg"></picture>
         </div>
         <div class="strengths-info-text">Strategic Planning</div>
         <div class="strengths-info-text2">Have a long-term goal in mind but uncertain of next step?</div>
