--- a/CV.html
+++ b/CV.html
@@ -57,12 +57,34 @@
 
   <main data-aos="fade-up">
     <section class="starter">
-      <p class="starter-text"><strong>Launch for the sky!</strong></p>
-      <p class="starter-text2"><em>Aiming low is not an option for me</em></p>
-      <div>
-        <picture><img src="CV/rocket.jpg" class="CV-img"></picture>
-      </div>
+      <div class="slider__slides">
+        <div class="slider__slide active">
+          <p class="starter-text"><strong>Launch for the sky!</strong></p>
+          <p class="starter-text2"><em>Aiming low is not an option for me</em></p>
+          <div>
+            <picture><img src="CV/rocket.jpg" class="CV-img"></picture>
+          </div>
+        </div>
 
+        <div class="slider__slide">
+          <p class="starter-text"><strong>I am a team player.</strong></p>
+          <p class="starter-text2"><em>Let me help you with your problems</em></p>
+          <div>
+            <picture><img src="cv/teamwork.jpg" class="CV-img"></picture>
+          </div>
+        </div>
+
+        <div class="slider__slide">
+          <p class="starter-text"><strong>Let's make an impact together!</strong></p>
+          <p class="starter-text2"><em></em></p>
+          <div>
+            <picture><img src="cv/impact.jpg" class="CV-img"></picture>
+          </div>
+        </div>
+
+        <div id="nav-button--prev" class="slider__nav-button"></div>
+        <div id="nav-button--next" class="slider__nav-button"></div>
+      </div>
     </section>
     <section class="strengths">
       <div class="strengths-text">
