--- a/CV.html
+++ b/CV.html
@@ -70,7 +70,7 @@
           <p class="starter-text"><strong>I am a team player.</strong></p>
           <p class="starter-text2"><em>Let me help you with your problems</em></p>
           <div>
-            <picture><img src="cv/teamwork.jpg" class="CV-img"></picture>
+            <picture><img src="CV/teamwork.jpg" class="CV-img"></picture>
           </div>
         </div>
 
@@ -78,7 +78,7 @@
           <p class="starter-text"><strong>Let's make an impact together!</strong></p>
           <p class="starter-text2"><em></em></p>
           <div>
-            <picture><img src="cv/impact.jpg" class="CV-img"></picture>
+            <picture><img src="CV/impact.jpg" class="CV-img"></picture>
           </div>
         </div>
 
