--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           </a>
         </li>
         <li>
-          <a class="footer-link" href="">
+          <a class="footer-link" href="uMeat.html" target="_blank">
             <ion-icon class="social-icon" name="logo-twitter"></ion-icon>
           </a>
         </li>
